--- a/5-kubernetes_admin/8-blue-green-deployment/green-deployment.yml
+++ b/5-kubernetes_admin/8-blue-green-deployment/green-deployment.yml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: green-container
-          image: nginx
+          image: nileshgule/blue-green-demo:green
           resources:
             requests:
               cpu: "10m" #1% of a core
